# NearCare_v1

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.next/: trace
.next/cache/: .tsbuildinfo
contract/: Cargo.toml  README.md
contract/src/: lib.rs  models.rs  test.rs  utils.rs
contract/src/models/: admin.rs  campaign.rs  donation.rs  message.rs  mod.rs  request.rs  user.rs  voting.rs
src/: .env  config.js  next.config.js  tailwind.config.js  tsconfig.json
src/.next/: trace
src/app/: rootReducers.ts
src/components/: Alert.tsx  ArchiveFilterListBox.tsx  Avatar.tsx  Badge.tsx  Button.tsx  ButtonCircle.tsx  ButtonClose.tsx  ButtonDropdown.tsx  ButtonPrimary.tsx  ButtonSecondary.tsx  CampaignCardAuthor.tsx  CampaignCardLarge.tsx  CampaignCardLikeAndComment.tsx  CampaignCardMeta.tsx  CampaignCategoryBadgeList.tsx  CampaignFeaturedMedia.tsx  CampaignMediaAudio.tsx  CampaignMeta2.tsx  Card1.tsx  Card10.tsx  Card10V2.tsx  Card10V3.tsx  Card11.tsx  Card12.tsx  Card13.tsx  Card14.tsx  Card15Podcast.tsx  Card16Podcast.tsx  Card17Podcast.tsx  Card2.tsx  Card3.tsx  Card3Small.tsx  Card4.tsx  Card5.tsx  Card6.tsx  Card7.tsx  Card8.tsx  Card9.tsx  CardAuthor.tsx  CardAuthor2.tsx  (+81 more)
src/containers/: BookmarkContainer.tsx  ButtonPlayMusicRunningContainer.tsx  CampaignCardLikeContainer.tsx  CommentCardLikeReplyContainer.tsx  DarkModeContainer.tsx  HeaderContainer.tsx  MediaRunningContainer.tsx  ModalCategories.tsx  ModalTags.tsx  PostCardLikeContainer.tsx  RegisterContainer.tsx  SectionFounder.tsx  SectionFounder2.tsx  SectionStatistic.tsx
(+228 files in other folders)
